cmake_minimum_required(VERSION 3.17)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithm main.cpp day1/RemoveDuplicateElement.h day2/RotateArray.h day3/DulplicateElement.h CommonHeader.h day4/FindSingleElement.h day5/PlusOne.h day6/RemoveZero.h AllDaysHead.h day7/FindPlusTarget.h day8/RotateMatrix.h)