cmake_minimum_required(VERSION 3.17)
project(Algorithm)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algorithm main.cpp day1/RemoveDuplicateElement.h day2/RotateArray.h day3/DulplicateElement.h CommonHeader.h day4/FindSingleElement.h day5/PlusOne.h day6/RemoveZero.h AllDaysHead.h day7/FindPlusTarget.h day8/RotateMatrix.h day9/ReverseChar.h day10/ReveseInt.h day11/FindFirstNoRepeat.h day12/Anagram.h day13/Palindrome.h day14/AtoI.h day15/LongestCommonPrefix.h day16/RemoveNthFromEnd.h day17/ReverseNode.h ListNode.h)